--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,8 +43,6 @@ init:
 #---------------------------------#
 
 before_build:
-  - echo Directory before starting build...
-  - dir
   - cd c:\tools\vcpkg\
   - git pull
   - bootstrap-vcpkg.bat
@@ -57,9 +55,7 @@ before_build:
 #---------------------------------#
 
 build_script:
-  - echo Directory before running build step...
   - cd c:\projects\generic-array
-  - dir
   - build %configuration% %arch%
  
 
@@ -68,15 +64,13 @@ build_script:
 #   and x64 architecture builds   #
 #---------------------------------#
 
-test_script:
-  - echo Project directory before running test step...
-  - dir
+# test_script:
+#   - echo Project directory before running test step...
 
 
 #---------------------------------#
 #   build and test completed      #
 #---------------------------------#
 
-on_finish:
-  - echo Project directory after running tests...
-  - dir
+# on_finish:
+#   - echo Project directory after running tests...
